--- a/4-point.tex
+++ b/4-point.tex
@@ -647,7 +647,7 @@ Then
 \]
 since otherwise $L_n'(x_1,x_2,x_3,x_{3+k})\le 0$, which would imply~\ref{eq:L<En-hats}.
 
-We can assume that $X$ is geodesic, otherwise pass to its ularacompletion.
+We can assume that $X$ is geodesic, otherwise pass to its ultracompletion.
 By \ref{eq:L'=L+L},
 $L_n'(x_1,x_2,x_3,x_{3+k})$ is a linear combination
 of $L_n(x_1,x_2,x_{2+i},x_{3+i})$ with positive coefficients;
