--- a/4-point.tex
+++ b/4-point.tex
@@ -36,7 +36,7 @@ We study the effect on length-metric spaces imposed by quadratic inequalities on
 \section{Introduction}\label{par:quadratic-inq}
 
 \paragraph{Quadratic condition.}
-Let $\bm{x}\z=(x_1,\dots,x_n)$ be an $n$-point array in a metric space $X$ and let $a_{i,j}$ be components of a symmetric $n{\times}n$ matrix.
+Let $\bm{x}\z=(x_1,\dots,x_n)$ be an $n$-point array in a metric space $X$ and let $a_{i,j}$ be the components of a symmetric $n{\times}n$ matrix.
 An inequality of the following type
 \[\sum_{i,j}a_{i,j}\cdot|x_i-x_j|_X^2\ge 0\]
 will be called \emph{quadratic}.
