--- a/4-point.tex
+++ b/4-point.tex
@@ -53,7 +53,7 @@ Then either the condition is trivial, or it describes Alexandrov spaces with non
 \end{thm}
 
 
-\paragraph{Auxiliary resuls.}
+\paragraph{Auxiliary results.}
 Let us state two auxiliary results that have independent interest.
 Their formulations use a special case of quadratic inequalities
 with $a_{i,j}=-\lambda_i\cdot\lambda_j$ for a real array $(\lambda_1,\dots, \lambda_n)$ such that $\lambda_1+\dots+\lambda_n=0$; they are discussed in Section~\ref{par:rank-one}.
@@ -376,8 +376,8 @@ in particular,
 \[|x_3-x_4|+\dots+|x_{2+k}-x_{3+k}|=|x_3-x_{3+k}|.\]
 
 \begin{thm}{Claim}\label{clm:1=>2}
-Suppose that innequality \ref{eq:lambda} for $\lambda$-array
-\[(\alpha\cdot (1-\beta),(1-\alpha)\cdot(1\z-\beta), \beta,-1)\] holds for any point arry in $X$.
+Suppose that inequality \ref{eq:lambda} for $\lambda$-array
+\[(\alpha\cdot (1-\beta),(1-\alpha)\cdot(1\z-\beta), \beta,-1)\] holds for any point array in $X$.
 Then so does the inequality for the $\lambda$-array
 \[(\alpha\cdot (1-\beta^k), (1-\alpha)\cdot(1-\beta^k), \beta^k,-1)\] for any integer $k\ge 1$.
 \end{thm}
@@ -407,7 +407,7 @@ L'(x_1,x_2,x_3,x_5)
 \end{aligned}
 \eqlbl{eq:L'=L+L}
 \]
-In particular, $L \le 0$ implies $L' \le 0$ as requred.
+In particular, $L \le 0$ implies $L' \le 0$ as required.
 
 Applying the claim several times, we get all the inequalities with $\lambda$-arrays
 \[(\alpha\cdot (1-\gamma),\  (1-\alpha)\cdot(1-\gamma),\ \gamma,\ -1),\]
