--- a/4-point.tex
+++ b/4-point.tex
@@ -30,7 +30,7 @@ pdfauthor={\theauthors}
 \maketitle
 
 \begin{abstract}
-We study the effect on length-metric spaces imposed by quadratic inequalities on the six distances between points in every quadruple.
+We study the effects on length spaces imposed by quadratic inequalities on the six distances between the points in every quadruple.
 \end{abstract}
 
 \section{Introduction}\label{par:quadratic-inq}
@@ -40,36 +40,36 @@ Let $\bm{x}\z=(x_1,\dots,x_n)$ be an $n$-point array in a metric space $X$ and l
 An inequality of the following type
 \[\sum_{i,j}a_{i,j}\cdot|x_i-x_j|_X^2\ge 0\]
 will be called \emph{quadratic}.
-A system of quadratic inequalities will be called \emph{quadratic condition}.
+A system of quadratic inequalities will be called a \emph{quadratic condition}.
 
 We will be interested in length spaces $X$ such that a given quadratic condition holds for any $n$-point array in $X$.
 The following statement says that the Toponogov theorem has no simple relatives.
 It will be proved in Section~\ref{par:globalization}.
 
 \begin{thm}{Main theorem}
-Suppose that a quadratic condition on 4-points satisfies the globalization property;
+Suppose that a quadratic condition on 4 points satisfies the globalization property;
 that is, if this condition holds locally (in a neighborhood of any point) in a length space $X$, then it holds in $X$.
 Then either the condition is trivial, or it describes Alexandrov spaces with nonnegative curvature.
 \end{thm}
 
 
 \paragraph{Auxiliary results.}
-Let us state two auxiliary results that have independent interest.
+Let us state two auxiliary results that are of independent interest.
 Their formulations use a special case of quadratic inequalities
-with $a_{i,j}=-\lambda_i\cdot\lambda_j$ for a real array $(\lambda_1,\dots, \lambda_n)$ such that $\lambda_1+\dots+\lambda_n=0$; they are discussed in Section~\ref{par:rank-one}.
+with $a_{i,j}=-\lambda_i\cdot\lambda_j$ for a real array $(\lambda_1,\dots, \lambda_n)$ such that $\lambda_1+\dots+\lambda_n=0$, which are discussed in Section~\ref{par:rank-one}.
 
-In Section~\ref{Four-point arrays}, we prove the following version of a theorem of Abraham Wald \cite[§ 7]{wald} that describes the metrics of all possible 4-point arrays in Alexandrov spaces with nonnegative and nonpositive curvature.
+In Section~\ref{Four-point arrays}, we prove a version of a theorem by Abraham Wald \cite[§ 7]{wald} describing the metrics of all possible 4-point arrays in Alexandrov spaces with nonnegative and nonpositive curvature.
 
 \begin{thm}{Proposition}
 The following three conditions are equivalent:
 \begin{enumerate}[(i)]
 \item A 4-point metric space $X$ is isometric to a subset of a length space with nonnegative (nonpositive) curvature in the sense of Alexandrov.
-\item $X$ is isometric to a subset in the product of $\RR^3\times r\cdot \SSS^1$ for some $r>0$ (respectively, $\RR^3\times Y$, where $Y$ denotes the tripod; that is, three half-lines with a common base point)
-\item All inequalities of negative type with $\lambda$-arrays such that $\lambda_1\cdot\lambda_2\cdot\lambda_3\cdot\lambda_4<0$ (respectively, type $\lambda_1\cdot\lambda_2\cdot\lambda_3\cdot\lambda_4>0$) hold in $X$.
+\item $X$ is isometric to a subset of the product $\RR^3\times r\cdot \SSS^1$ for some $r>0$ (respectively, of $\RR^3\times Y$, where $Y$ denotes the tripod; that is, three half-lines with a common base point).
+\item All inequalities of negative type with $\lambda$-arrays such that $\lambda_1\cdot\lambda_2\cdot\lambda_3\cdot\lambda_4<0$ (respectively, with $\lambda_1\cdot\lambda_2\cdot\lambda_3\cdot\lambda_4>0$) hold in $X$.
 \end{enumerate}
 \end{thm}
 
-Further, in Section~\ref{Alexandrov's comparison}, we prove that a single nondegenerate inequality of negative type defines Alexandrov spaces with nonnegative and nonpositive curvature.
+Further, in Section~\ref{Alexandrov's comparison}, we prove that a single nondegenerate inequality of negative type defines Alexandrov spaces with either nonnegative and nonpositive curvature.
 
 \begin{thm}{Proposition}
 Let us consider all length spaces that satisfy the quadratic condition given by an inequality of negative type $\lambda$-array $(\lambda_1,\lambda_2,\lambda_3,\lambda_4)$.
@@ -86,22 +86,22 @@ The proof is a straightforward combination of the arguments by Takashi Sato \cit
 these papers consider particular cases of such inequalities, namely those for the $\lambda$-arrays $(1,1,-1,-1)$ and $(1,1,1,-3)$.
 
 Sections \ref{Associated form} and \ref{par:rank-one} introduce necessary definitions.
-Here we define the associated quadratic form for a point array and inequalities of negative type.
+Here we define the associated quadratic form for a point array and the inequalities of negative type.
 We also prove several basic statements that are valid for all $n$-point arrays.
 Section \ref{Auxiliary statements} provides a technical statement for the proof of the main theorem.
 
 \section{Associated form}\label{Associated form}
 
 Choose a point array $\bm{x}=(x_1,\dots,x_n)$ in a metric space.
-Let $V_n\z=\RR^{n-1}$ be Euclidean space with a choice of unit-edge regular simplex $\triangle$, whose vertices are $y_1,\dots,y_n$.
-Consider the quadratic form $\rho_{\bm{x}}$ on $V_n$ that is defined by the equalities
+Let $V_n\z=\RR^{n-1}$ be the Euclidean space with a choice of unit-edge regular simplex $\triangle$, whose vertices are $y_1,\dots,y_n$.
+Consider the quadratic form $\rho_{\bm{x}}$ on $V_n$ defined by the equalities
 \[\rho_{\bm{x}}(y_i-y_j)=|x_i-x_j|^2_X\]
 for all indices $i$ and $j$.
 
 The quadratic form $\rho_{\bm{x}}$ will be called the \emph{associated form} of $\bm{x}=(x_1,\z\dots,x_n)$;
 it is uniquely defined and remembers all distances $|x_i-x_j|_X$
 (we assume that the simplex $\triangle$ in $V_n$ is known).
-We may not distinguish between $\rho_{\bm{x}}$ and the corresponding semimetric on $\bm{x}=(x_1,\dots,x_n)$.
+We may not distinguish $\rho_{\bm{x}}$ and the corresponding semimetric on $\bm{x}=(x_1,\dots,x_n)$.
 
 The Euclidean structure on $V_n$ identifies it with $V_n^*$.
 The space of quadratic forms over $V_n$ will be denoted by $W_n$;
@@ -120,19 +120,21 @@ The following two observations were made by Alexandr Andoni, Assaf Naor, and Ofe
 Since $K$ is a convex cone,
 \[X,\ Y\in  \mathcal{M}_K
 \qquad\Longrightarrow\qquad
-X\times Y,\ a\cdot X\in\mathcal{M}_K
+X\times Y\in\mathcal{M}_K
+\quad\text{and}\quad
+a\cdot X\in\mathcal{M}_K
 \]
 for any $a\ge 0$;
 here $X\times Y$ denotes the $\ell_2$-product of metric spaces, and
-$a\cdot X$ denotes the rescaled copy of $X$ with factor $a$.
+$a\cdot X$ denotes the rescaled copy of $X$ with scaling factor $a$.
 Moreover, this can be used in the opposite direction as well.
 It gives that all forms $\rho_{\bm{x}}$ for point arrays $\bm{x}$ in $\mathcal{M}_K$-spaces form a convex cone.
 Let us denote this new cone by $K'$.
 
-Evidently $K'\subset K$, and this inclusion might be strict.
+Evidently, $K'\subset K$, and this inclusion might be strict.
 The first reason comes from the triangle inequality, which is equivalent to $\rho_{\bm{x}}(w)\ge 0$ for any vector $w$ in 2-faces of $\triangle$.
 These inequalities must hold for any form in $K'$.
-Furthermore, if $\rho_{\bm{x}}\in K'$, then $\rho_{\hat{\bm{x}}}\in K'$ for any $n$-point array $\hat{\bm{x}}$ made from the points of $\bm{x}$; in particular $\hat{\bm{x}}$ might be a permutation of points in $\bm{x}$.
+Furthermore, if $\rho_{\bm{x}}\in K'$, then $\rho_{\hat{\bm{x}}}\in K'$ for any $n$-point array $\hat{\bm{x}}$ chosen from the points of $\bm{x}$; in particular $\hat{\bm{x}}$ might be a permutation of points in $\bm{x}$.
 
 These two conditions hold for all metrics (not necessarily intrinsic),
 and one cannot get more for general metric spaces.
@@ -165,7 +167,7 @@ Consider the ultracompletion $X^\omega$ of $X$;
 the space $X$ will be considered as a subset of $X^\omega$.
 Since $K$ is closed, the observation implies that $X^\omega\in \mathcal{M}_K$.
 
-Since  $X$ is a length space, $X^\omega$ has to be geodesic.
+Since $X$ is a length space, $X^\omega$ has to be geodesic.
 Since $X^\omega$
 contains a pair of distinct points, it must contain a nontrivial geodesic.
 It follows that $\mathcal{M}_K$ contains a line segment.
@@ -207,7 +209,7 @@ Since changing the signs of all $\lambda_i$ does not change the inequality, we c
 For $4$-point arrays, we have two interesting types of rank-one inequalities: negative type $(2,2)$ and $(3,1)$.
 The type $(1,1)$ is trivial, and
 the type $(2,1)$ follows from the triangle inequality.
-In fact, all the triangle inequalities (we have 12 of them for 4 points) are equivalent to all inequalities of negative type $(2,1)$ (there are infinitely many of them).
+In fact, all the triangle inequalities (there are 12 such inequalities for 4 points) are equivalent to all inequalities of negative type $(2,1)$ (there are infinitely many of them).
 
 Consider a rank-one inequality $\rho_{\bm{x}}(v)\ge 0$; we may assume that $v$ is a unit vector.
 Since the sign of $v$ does not change the inequality, we may assume that it lies in a closed hemisphere bounded by an equator in the direction of one of the facets of $\triangle$.
@@ -235,7 +237,7 @@ For example, if it is marked by $12$, then $x_1=x_2$.
 \begin{thm}{Proposition}\label{prop:Four-point arrays}
 Let $X$ be a 4-point metric space.
 
-$X$ satisfies all inequalities of negative type $(3, 1)$, if and only if it admits an isometric embedding into the product $r\cdot \mathbb{S}^1\times\RR^3$ for some $r>0$.
+$X$ satisfies all inequalities of negative type $(3, 1)$ if and only if it admits an isometric embedding into the product $r\cdot \mathbb{S}^1\times\RR^3$ for some $r>0$.
 
 $X$ satisfies all inequalities of negative type $(2, 2)$, if and only if it admits an isometric embedding into the product $Y\times\RR^3$, where $Y$ denotes the \emph{tripod};
 that is, three half-lines with a common base point.
@@ -270,7 +272,7 @@ $\rho\ge 0$ and by \ref{obs:rank-one}, the space $X$ is isometric to a 4-point s
 
 Since all $(2,1)$-inequalities hold for $\tilde\rho$, the form $\tilde\rho$
 must be nonnegative on 4 equators $e_1,e_2,e_3,e_4$ in the directions of facets of $\triangle$.
-Since $\tilde\rho$ is minimal, $\bar N$ has to touch $e_i$ at least at 3 directions (up to sign). 
+Since $\tilde\rho$ is minimal, $\bar N$ has to touch $e_i$ in at least 3 directions (up to sign).
 If not, then there is a linear function, say $\sigma$, that vanishes at all common points of $\bar N$ and $e_i$ for all $i$.
 In this case, consider the form $\tilde\rho-\eps\cdot \sigma^2$ for small $\eps>0$;
 note that all $(2,1)$-inequalities still hold for this form.
@@ -296,7 +298,7 @@ Look at the diagram and convince yourself that after relabeling, we may assume t
 \\
 |x_2-x_3|&=|x_2-x_4|+|x_4-x_3|.
 \end{align*}
-If it touches all sides, then in addition we have $|x_2-x_3|=|x_2-x_1|+|x_1-x_3|$.
+If it touches all sides, we also have $|x_2-x_3|=|x_2-x_1|+|x_1-x_3|$.
 In any case, the array can be embedded into $r\cdot \mathbb{S}^1$, where $r=|x_1-x_4|/\pi$;
 so the points $x_1$ and $x_4$ become antipodal in $r\cdot \mathbb{S}^1$.
 \qeds
@@ -339,8 +341,8 @@ It remains to consider the inequalities of negative type $(2,2)$ or $(3,1)$.
 In these cases, we can assume that our $\lambda$-array is
 \[(\alpha\cdot (1-\beta),\  (1-\alpha)\cdot(1-\beta),\  \beta,\ -1)\] 
 for some $\alpha,\beta$ such that $0< \beta< 1$;
-in case of $(3,1)$-inequality, we have $0<\alpha<1$, and
-in case of $(2,2)$-inequality, we have $1<\alpha$.
+in the case of $(3,1)$-inequality, we have $0<\alpha<1$, and
+in the case of $(2,2)$-inequality, we have $1<\alpha$.
 
 Consider the 4-point array $\bm{x}=(x_1,x_2,x_3,x_4)$  in the plane such that 
 \[x_4=\alpha\cdot (1-\beta)\cdot x_1+(1-\alpha)\cdot(1-\beta)\cdot x_2+\beta\cdot x_3.\]
@@ -384,7 +386,7 @@ Then so does the inequality for the $\lambda$-array
 
 These two inequalities correspond to the arrays $x_1$, $x_2$, $x_3$, $x_4$ and $x_1$, $x_2$, $x_3$, $x_{3+k}$;
 let us denote by $L(p, q, r, s)$ and $L'(p, q, r, s)$ the left-hand sides in \ref{eq:lambda} for these two inequalities for the array $p, q, r, s$.
-We know that $L\le 0 $ holds for any four-point array in $X$ and need to show the same for $L'\le 0$.
+We know that $L\le 0 $ holds for any 4-point array in $X$ and need to show the same for $L'\le 0$.
 
 Passing to the ultracompletion, we may assume that $X$ is geodesic.
 Choose 4 points $x_1,x_2,x_3,x_{3+k}\in X$ and let $x_4,\dots,x_{2+k}$ be the points on a geodesic $[x_3x_{3+k}]$ that divide in the same proportions as in our plane configuration;
@@ -433,7 +435,7 @@ Let us apply \ref{eq:lambda-inq}
 \includegraphics{mppics/pic-15}
 \vskip0mm
 \end{figure}
-to a quadruple $x_1,x_2,x_3,x_4\in X$ such that $x_1$, $x_2$ and $x_4$ lie on one geodesic, and we have equality in the $(2,1)$-inequality with $\lambda$-array
+to a quadruple $x_1,x_2,x_3,x_4\in X$ such that $x_1$, $x_2$, and $x_4$ lie on one geodesic, and we have equality in the $(2,1)$-inequality with $\lambda$-array
 \[(\alpha,\  (1-\alpha),\ 0,\ -1);\]
 that is,
 \[\alpha\cdot (1-\alpha)\cdot|x_1-x_2|^2-\alpha\cdot |x_1-x_4|^2-(1-\alpha)\cdot |x_2-x_4|^2=0.\eqlbl{eq:trig-inq}\]
@@ -470,7 +472,7 @@ and this is equivalent to the point-on-side comparison for nonpositive curvature
 \section{Globalization}\label{par:globalization}
 
 Let $K\subset W_n$ be a closed convex cone.
-We say that a metric space $X$ meets \emph{local $K$-comparison} if any point $x\in X$ admits a neighborhood $U$, such that $K$-comparison holds for any $n$-point array in $U$.
+We say that a metric space $X$ meets \emph{local $K$-comparison} if any point $x\in X$ admits a neighborhood $U$ such that $K$-comparison holds for any $n$-point array in $U$.
 
 If local $K$-comparison implies $K$-comparison for any length space, then we say that \emph{globalization holds} for $K$.
 
@@ -480,7 +482,7 @@ so, Toponogov's theorem is the only nontrivial globalization theorem for quadrat
 \begin{thm}{Theorem}\label{thm:globalization}
 Suppose that the globalization holds for a closed convex cone $K\z\subset W_4$.
 Assume that the $K$-comparison is not trivial;
-that is, on one side $\mathcal{M}_K$ does not include all length spaces, and, on the other side, $\mathcal{M}_K$ contains a space with at least two distinct points.
+that is, on one side $\mathcal{M}_K$ does not include all length spaces and on the other side $\mathcal{M}_K$ contains a space with at least two distinct points.
 Then $\mathcal{M}_K$ consists of Alexandrov spaces with nonnegative curvature.
 \end{thm}
 
@@ -504,33 +506,33 @@ By \ref{cor:Four-point arrays}, $K_0$ describes all metrics on 4-point arrays in
 By \ref{lem:globalization},  $K$~includes $K_0$.
 
 Given small $\delta>0$, consider all metrics with diameter at most $\delta$ on a 4-point array $\{x_1,x_2,x_3,x_4\}$ in an Alexandrov space with curvature at least $-1$.
-Due to Wald's Theorem (see \cite[Exercise 10.7]{AKP-2024}) we can assume that the $4$-point array
+Due to Wald's theorem (see \cite[Exercise 10.7]{AKP-2024}) we can assume that the $4$-point array
 comes from a model $k$-plane (that is, a complete simply connected 2-dimensional Riemannian manifold of constant curvature $k$) with $k \ge -1$.
-This implies that the array either (a) is isometric to a $4$-point subset of some sphere or (b) is bi-Lipshitz equivalent with the constant $1 + C\cdot \delta^2$ to a $4$-point subset of a Euclidean plane, where $C > 0$ is some absolute constant.
+This implies that the array either (a) is isometric to a $4$-point subset of some sphere or (b) is bi-Lipschitz equivalent with the constant $1 + C\cdot \delta^2$ to a $4$-point subset of a Euclidean plane, where $C > 0$ is some absolute constant.
 Denote by $K_\delta\subset W_4$ the minimal closed convex cone that includes all associated forms of these metrics.
 Note that $K_0\z\subset K_\delta$.
 Furthermore, 
 %after rescaling the metric on $\{x_1,x_2,x_3,x_4\}$ with %a factor of $\tfrac1\delta$, the array gets diameter at %most $1$ and is embeddable in an Alexandrov space with curvature at least $-\delta^2$; 
-any element of $K_\delta$ is bi-Lipshitz equivalent with the constant $1 + C \cdot\delta^2$ to some element of $K_0$;
+any element of $K_\delta$ is bi-Lipschitz equivalent with the constant $1 + C \cdot\delta^2$ to some element of $K_0$;
 therefore, $K_0=\bigcap_{\delta>0} K_\delta$.
 
 Every Riemannian manifold admits a local curvature bound at each point.
 In particular, after appropriate rescaling, a small neighborhood of any point of a Riemannian manifold has curvature at least $-1$.
-Therefore, any compact Riemannian manifold satisfies local $K_\delta$-comparison.
+Therefore, any compact Riemannian manifold satisfies the local $K_\delta$-comparison.
 
 Suppose $K\supset K_\delta$ for some $\delta>0$.
 Since globalization holds for $K$, the class $\mathcal{M}_K$ contains all compact Riemannian manifolds.
 \textit{Every finite metric graph can be approximated by compact Riemannian manifolds.}
 To prove it,
 realize the graph in Euclidean space with smooth edges of the same length and take the boundary of an appropriate neighborhood.
-(A way stronger result is proved by Vedrin Šahović in his thesis \cite{sahovic2009}.)
+(A way stronger result was proved by Vedrin Šahović in his thesis \cite{sahovic2009}.)
 Any metric on $\{x_1,x_2,x_3,x_4\}$ admits a distance-preserving embedding into a metric graph, so $K$ contains a form near the associated form for any semimetric on $\{x_1,x_2,x_3,x_4\}$.
-Since $K$ is closed, it contains forms associated to all metrics on 4-point set;
+Since $K$ is closed, it contains forms associated with all metrics on 4-point set;
 so $K$ is defined only by the triangle inequalities, and the $K$-comparison is trivial.
 
 From now on, we can assume that for any $\delta>0$, there is a form $\theta\in K_\delta\setminus K$.
 By \ref{cor:squared-sides}, we can find a $(3,1)$-inequality that holds in $K$ with small error.
-Namely, there is a $\lambda$-array $(\lambda_1,\lambda_2,\lambda_3,-1)$ such that $\lambda_i>0$ and
+Namely, there is a $\lambda$-array $(\lambda_1,\lambda_2,\lambda_3,-1)$, such that $\lambda_i>0$ and
 \[\begin{aligned}
 \sum_{i,j}&\lambda_i\cdot\lambda_j\cdot|x_i-x_j|_X^2
 \le
@@ -539,7 +541,7 @@ Namely, there is a $\lambda$-array $(\lambda_1,\lambda_2,\lambda_3,-1)$ such tha
 10\cdot\delta^2\cdot \lambda_1\cdot\lambda_2\cdot\lambda_3\cdot (|x_1-x_2|_X^2+|x_2-x_3|_X^2+|x_3-x_1|_X^2)
 \end{aligned}
 \eqlbl{eq:+squares}\]
-for any 4-array $(x_1,x_2,x_3,x_4)$ with its form in $K$.
+for any 4-array $(x_1,x_2,x_3,x_4)$ with its form lying in $K$.
 
 Let $\bm{\lambda}_\infty=(\lambda_1,\lambda_2,\lambda_3,-1)$ be a partial limit of these $\lambda$-arrays;
 that is, for some sequence $\delta_n\to 0^+$, we can choose corresponding inequalities of the form \ref{eq:+squares} with $\lambda$-arrays $\bm{\lambda}_n$ such that $\bm{\lambda}_n\to \bm{\lambda}_\infty$ as $n\to \infty$.
@@ -594,7 +596,7 @@ If we assume $\alpha=\alpha_n$ and $\gamma=\beta_n$ in \ref{eq:lambda-inq}, then
 \leqno{\text{\ref{eq:lambda-inq}}'}
 \]
 
-The inequality $\tfrac1{\beta_n}\cdot$\ref{eq:lambda-inq}$'\,-\,\tfrac{1-\beta_n}{\beta_n}\cdot$\ref{eq:trig-inq}$'$ imply the following
+The inequality $\tfrac1{\beta_n}\cdot$\ref{eq:lambda-inq}$'\,-\,\tfrac{1-\beta_n}{\beta_n}\cdot$\ref{eq:trig-inq}$'$ implies the following
 \[
 \begin{aligned}
 \alpha_n\cdot|x_1-x_3|^2+(1-\alpha_n)\cdot|x_2-x_3|^2&-
@@ -626,7 +628,7 @@ E_n=10\cdot\alpha_n\cdot(1-\alpha_n)\cdot\beta_n\cdot(1-\beta_n)^2
 
 Choose the largest $k = k(n)$ such that $ \beta_n^{k}\ge \tfrac{99}{100}$.
 Note that $k(n)$ is defined for all sufficiently large~$n$;
-morevoer $\beta_n^k\to \tfrac{99}{100}$ as $n\to\infty$.
+moreover, $\beta_n^k\to \tfrac{99}{100}$ as $n\to\infty$.
 As in the proof of Claim~\ref{clm:1=>2}, let $L_n'$ be the left-hand side in~\ref{eq:lambda} for the array
 \[{\bm{\lambda}}'_n=(\alpha_n\cdot(1-\beta_n^{k}),(1-\alpha_n)\cdot(1-\beta_n^{k}),\beta_n^{k},-1),\]
 and define
@@ -637,7 +639,7 @@ Let us prove the following inequality
 L_n'\le 1000\cdot \delta_n^2\cdot E_n'.
 \eqlbl{eq:L<En-hats}
 \]
-Note that the new array ${\bm{\lambda}}'_n$ is covered in cases cases~\ref{in} or~\ref{side}.
+Note that the new array ${\bm{\lambda}}'_n$ is covered in cases~\ref{in} or~\ref{side}.
 Therefore, once \ref{eq:L<En-hats} is proved, case \ref{vertex} will be covered.
 
 Assume the contrary; choose an array $x_1,x_2,x_3,x_{3+k}$ for which \ref{eq:L<En-hats} does not hold.
@@ -725,7 +727,7 @@ From the above, we get $\phi\le \psi+\tilde a$.
 By the law of cosines,
 \[|x_2-x_3|^2=|x_1-x_2|^2+ |x_1-x_3|^2-2|x_1-x_2|\cdot|x_1-x_3|\cdot\cos\phi\]
 Redefining the distance $|x_2-x_3|$ via the law of cosines with angle $\psi$,
-\[|x_2-x_3|^2\mathrel{:=}|x_1-x_2|^2+ |x_1-x_3|^2-2|x_1-x_2|\cdot|x_1-x_3|\cdot\cos\psi\]
+\[|x_2-x_3|^2\mathrel{:=}|x_1-x_2|^2+ |x_1-x_3|^2-2|x_1-x_2|\cdot|x_1-x_3|\cdot\cos\psi.\]
 yields a Euclidean quadruple.
 That is, decreasing $|x_2-x_3|^2$ by
 \[s=2\cdot |x_1-x_2|\cdot|x_1-x_3|\cdot(\cos\psi-\cos\phi)\]
@@ -738,7 +740,7 @@ s
 2\cdot|x_1-x_2|\cdot|x_1-x_3|\cdot (\tilde a\cdot\sin\phi+\tfrac12\cdot\tilde a^2)
 \le
 \\
-&\le\ (4+\delta^2)\cdot \tilde a^2
+&\le\ (4+\delta^2)\cdot \tilde a^2.
 \end{align*}
 
 It follows that
@@ -775,7 +777,7 @@ Our inequality can be written as $\langle \omega,\rho_{\bm{x}} \rangle\ge 0$, wh
 \vskip-0mm
 \end{wrapfigure}
 
-Let $N\subset \SSS^2\subset V_4$ be the set of unit vectors $v$ such that $\theta(v)<0$.
+Let $N\subset \SSS^2\subset V_4$ be the set of unit vectors $v$ for which $\theta(v)<0$.
 The set $N$ does not intersect the four equators $e_1$, $e_2$, $e_3$, $e_4$ parallel to the facets of $\triangle$.
 Moreover, since $K\supset K_0$, the set $N$ (up to sign) lies in one of triangles, say $T$;
 we can assume that equators $e_1$, $e_2$, $e_3$ are extensions of sides of $T$, and $e_4$ is the remaining equator.
@@ -832,7 +834,7 @@ $\tilde a\z\le \delta\cdot \tilde d_w/2$.
 Hence
 \[\eps_v+\eps_w\le \tfrac{13}4\cdot \delta^2\cdot\lambda_1\cdot\lambda_2\cdot\lambda_3.\]
 
-Note that for a general 4-point array, $\tilde d_v$ and $\tilde d_w$ do not exceed the maximal side of the triangle $x_1x_2x_3$ --- hence the result.
+Note that for a general 4-point array, $\tilde d_v$ and $\tilde d_w$ do not exceed the largest side of the triangle $x_1x_2x_3$ --- hence the result.
 \qeds
 
 \section{Remarks}
@@ -848,7 +850,8 @@ Some candidates can be found in our earlier paper \cite{lebedeva-petrunin-zoloto
 Also, it might be possible to prove a version of our globalization theorem
 for simply connected spaces, which includes the Cartan--Hadamard theorem.
 
-For general (closed) conditions on semimetrics on $n$-point arrays, globalization holds of course for curvature bounded below by $\kappa\in \RR$ in the sense of Alexandrov,
+For general (closed) conditions on semimetrics on $n$-point arrays,
+globalization of course holds for curvature bounded below by $\kappa\in \RR$ in the sense of Alexandrov,
 but it holds for other conditions as well;
 the set of semimetrics on $4$-point arrays that are embeddable in $r\cdot\SSS^1$ for any $r>0$ gives an example.
 Therefore, understanding globalization phenomena in such general settings is even more interesting.
