--- a/4-point.tex
+++ b/4-point.tex
@@ -69,7 +69,7 @@ The following three conditions are equivalent:
 \end{enumerate}
 \end{thm}
 
-Further, in Section~\ref{Alexandrov's comparison}, we prove that a single nondegenerate inequality of negative type defines Alexandrov spaces with either nonnegative and nonpositive curvature.
+Further, in Section~\ref{Alexandrov's comparison}, we prove that a single nondegenerate inequality of negative type defines Alexandrov spaces with either nonnegative or nonpositive curvature.
 
 \begin{thm}{Proposition}
 Let us consider all length spaces that satisfy the quadratic condition given by an inequality of negative type $\lambda$-array $(\lambda_1,\lambda_2,\lambda_3,\lambda_4)$.
@@ -82,7 +82,7 @@ Let us consider all length spaces that satisfy the quadratic condition given by 
 \end{thm}
 
 This statement shows that a relatively weak form of 4-point comparison forces a much stronger 4-point comparison (once we assume that the metric is intrinsic).
-The proof is a straightforward combination of the arguments by Takashi Sato \cite{sato} and its variation by the first two authors \cite{lebedeva-petrunin-2010};
+The proof is a straightforward combination of an argument by Takashi Sato \cite{sato} and a variation due to the first two authors \cite{lebedeva-petrunin-2010};
 these papers consider particular cases of such inequalities, namely those for the $\lambda$-arrays $(1,1,-1,-1)$ and $(1,1,1,-3)$.
 
 Sections \ref{Associated form} and \ref{par:rank-one} introduce necessary definitions.
@@ -101,7 +101,7 @@ for all indices $i$ and $j$.
 The quadratic form $\rho_{\bm{x}}$ will be called the \emph{associated form} of $\bm{x}=(x_1,\z\dots,x_n)$;
 it is uniquely defined and remembers all distances $|x_i-x_j|_X$
 (we assume that the simplex $\triangle$ in $V_n$ is known).
-We may not distinguish $\rho_{\bm{x}}$ and the corresponding semimetric on $\bm{x}=(x_1,\dots,x_n)$.
+We are allowed to not distinguish between $\rho_{\bm{x}}$ and the corresponding semimetric on $\bm{x}=(x_1,\dots,x_n)$.
 
 The Euclidean structure on $V_n$ identifies it with $V_n^*$.
 The space of quadratic forms over $V_n$ will be denoted by $W_n$;
@@ -128,11 +128,11 @@ for any $a\ge 0$;
 here $X\times Y$ denotes the $\ell_2$-product of metric spaces, and
 $a\cdot X$ denotes the rescaled copy of $X$ with scaling factor $a$.
 Moreover, this can be used in the opposite direction as well.
-It gives that all forms $\rho_{\bm{x}}$ for point arrays $\bm{x}$ in $\mathcal{M}_K$-spaces form a convex cone.
+It follows that all forms $\rho_{\bm{x}}$ for point arrays $\bm{x}$ in $\mathcal{M}_K$-spaces form a convex cone.
 Let us denote this new cone by $K'$.
 
 Evidently, $K'\subset K$, and this inclusion might be strict.
-The first reason comes from the triangle inequality, which is equivalent to $\rho_{\bm{x}}(w)\ge 0$ for any vector $w$ in 2-faces of $\triangle$.
+The first reason comes from the triangle inequality, which is equivalent to $\rho_{\bm{x}}(w)\ge 0$ for any vector $w$ lying in a 2-face of $\triangle$.
 These inequalities must hold for any form in $K'$.
 Furthermore, if $\rho_{\bm{x}}\in K'$, then $\rho_{\hat{\bm{x}}}\in K'$ for any $n$-point array $\hat{\bm{x}}$ chosen from the points of $\bm{x}$; in particular $\hat{\bm{x}}$ might be a permutation of points in $\bm{x}$.
 
@@ -195,7 +195,7 @@ Recall that $\rho_{\bm{x}}$ denotes the associated quadratic form for a given po
 A point array $\bm{x}=(x_1,\dots,x_n)$ is isometric to an array in a Euclidean space if and only if $\rho_{\bm{x}}(v)\ge 0$ for any vector $v$.
 \end{thm}
 
-An inequality of type $\rho_{\bm{x}}(v)\ge 0$ for a fixed vector $v\in V_n$ will be called \emph{rank-one} inequality.
+An inequality of type $\rho_{\bm{x}}(v)\ge 0$ for a fixed vector $v\in V_n$ will be called a \emph{rank-one} inequality.
 It belongs to the class of quadratic inequalities.  
 In the notation of Section~\ref{par:quadratic-inq}, it means that $a_{i,j}=-\lambda_i\cdot\lambda_j$ for a real array $(\lambda_1,\dots, \lambda_n)$ such that
 $\lambda_1+\dots+\lambda_n=0$.
@@ -239,7 +239,7 @@ Let $X$ be a 4-point metric space.
 
 $X$ satisfies all inequalities of negative type $(3, 1)$ if and only if it admits an isometric embedding into the product $r\cdot \mathbb{S}^1\times\RR^3$ for some $r>0$.
 
-$X$ satisfies all inequalities of negative type $(2, 2)$, if and only if it admits an isometric embedding into the product $Y\times\RR^3$, where $Y$ denotes the \emph{tripod};
+$X$ satisfies all inequalities of negative type $(2, 2)$ if and only if it admits an isometric embedding into the product $Y\times\RR^3$, where $Y$ denotes the \emph{tripod};
 that is, three half-lines with a common base point.
 \end{thm}
 
@@ -255,7 +255,7 @@ A 4-point metric space $X$ is isometric to a subset of a length space with nonne
 The corresponding five-point versions of this corollary have been proved by Tetsu Toyoda \cite{toyoda,lebedeva-petrunin2021} and the first two authors \cite{lebedeva-petrunin-2024}, respectively.
 
 \parit{Proof of \ref{prop:Four-point arrays}.}
-Let us enumerate points in $X$ and let $\rho$ be the associated form on~$V_4$.
+Let us enumerate the points in $X$ and let $\rho$ be the associated form on~$V_4$.
 
 Choose a minimal form $\tilde\rho\le \rho$ such that all $(2,1)$-inequalities hold for $\tilde\rho$;
 here $\tilde\rho\le \rho$ means that $\tilde\rho(v)\le \rho(v)$ for any vector $v$.
@@ -278,7 +278,7 @@ In this case, consider the form $\tilde\rho-\eps\cdot \sigma^2$ for small $\eps>
 note that all $(2,1)$-inequalities still hold for this form.
 Therefore, $\tilde\rho$ is not minimal --- a contradiction.
 
-It means that $\bar N$ lies in a quadrangle or triangle, respectively, and touches its sides at three points or more.
+It means that $\bar N$ lies in a quadrangle or a triangle, respectively, and touches its sides at three points or more.
 
 In the case of a triangle, $\bar N$ has to touch all of its sides.
 According to the diagram above, after relabeling, we can assume that
@@ -341,8 +341,8 @@ It remains to consider the inequalities of negative type $(2,2)$ or $(3,1)$.
 In these cases, we can assume that our $\lambda$-array is
 \[(\alpha\cdot (1-\beta),\  (1-\alpha)\cdot(1-\beta),\  \beta,\ -1)\] 
 for some $\alpha,\beta$ such that $0< \beta< 1$;
-in the case of $(3,1)$-inequality, we have $0<\alpha<1$, and
-in the case of $(2,2)$-inequality, we have $1<\alpha$.
+in the case of the $(3,1)$-inequality, we have $0<\alpha<1$, and
+in the case of the $(2,2)$-inequality, we have $1<\alpha$.
 
 Consider the 4-point array $\bm{x}=(x_1,x_2,x_3,x_4)$  in the plane such that 
 \[x_4=\alpha\cdot (1-\beta)\cdot x_1+(1-\alpha)\cdot(1-\beta)\cdot x_2+\beta\cdot x_3.\]
@@ -352,7 +352,7 @@ and for $(2,2)$-inequality, the segment $[x_1x_3]$ intersects $[x_2x_4]$.
 
 Note that for this array we get equality in \ref{eq:lambda}.
 Moreover, there is a bijection between plane $\bm{x}$-arrays up to affine transformation and $\lambda$-arrays without zeros up to multiplication by a nonzero coefficient;
-as before, we assume that the $\bm{x}$-arrays are in general position --- no three of its points lie on one line.
+as before, we assume that the $\bm{x}$-arrays are in general position --- no three of their points lie on one line.
 In other words, we can describe our inequality by a 4-point array in general position up to affine transformation.
 If the points of the array lie at the vertices of a convex quadrangle,
 then it corresponds to an inequality of type $(2,2)$.
@@ -505,7 +505,7 @@ Let us denote by $K_0$ the cone in $W_4$ described by all inequalities of negati
 By \ref{cor:Four-point arrays}, $K_0$ describes all metrics on 4-point arrays in Alexandrov spaces with nonnegative curvature.
 By \ref{lem:globalization},  $K$~includes $K_0$.
 
-Given small $\delta>0$, consider all metrics with diameter at most $\delta$ on a 4-point array $\{x_1,x_2,x_3,x_4\}$ in an Alexandrov space with curvature at least $-1$.
+Given a small $\delta>0$, consider all metrics with diameter at most $\delta$ on a 4-point array $\{x_1,x_2,x_3,x_4\}$ in an Alexandrov space with curvature at least $-1$.
 Due to Wald's theorem (see \cite[Exercise 10.7]{AKP-2024}) we can assume that the $4$-point array
 comes from a model $k$-plane (that is, a complete simply connected 2-dimensional Riemannian manifold of constant curvature $k$) with $k \ge -1$.
 This implies that the array either (a) is isometric to a $4$-point subset of some sphere or (b) is bi-Lipschitz equivalent with the constant $1 + C\cdot \delta^2$ to a $4$-point subset of a Euclidean plane, where $C > 0$ is some absolute constant.
@@ -525,9 +525,9 @@ Since globalization holds for $K$, the class $\mathcal{M}_K$ contains all compac
 \textit{Every finite metric graph can be approximated by compact Riemannian manifolds.}
 To prove it,
 realize the graph in Euclidean space with smooth edges of the same length and take the boundary of an appropriate neighborhood.
-(A way stronger result was proved by Vedrin Šahović in his thesis \cite{sahovic2009}.)
+(A much stronger result was proved by Vedrin Šahović in his thesis \cite{sahovic2009}.)
 Any metric on $\{x_1,x_2,x_3,x_4\}$ admits a distance-preserving embedding into a metric graph, so $K$ contains a form near the associated form for any semimetric on $\{x_1,x_2,x_3,x_4\}$.
-Since $K$ is closed, it contains forms associated with all metrics on 4-point set;
+Since $K$ is closed, it contains forms associated with all metrics on the 4-point set;
 so $K$ is defined only by the triangle inequalities, and the $K$-comparison is trivial.
 
 From now on, we can assume that for any $\delta>0$, there is a form $\theta\in K_\delta\setminus K$.
@@ -541,7 +541,7 @@ Namely, there is a $\lambda$-array $(\lambda_1,\lambda_2,\lambda_3,-1)$, such th
 10\cdot\delta^2\cdot \lambda_1\cdot\lambda_2\cdot\lambda_3\cdot (|x_1-x_2|_X^2+|x_2-x_3|_X^2+|x_3-x_1|_X^2)
 \end{aligned}
 \eqlbl{eq:+squares}\]
-for any 4-array $(x_1,x_2,x_3,x_4)$ with its form lying in $K$.
+for any 4-point array $(x_1,x_2,x_3,x_4)$ with its form lying in $K$.
 
 Let $\bm{\lambda}_\infty=(\lambda_1,\lambda_2,\lambda_3,-1)$ be a partial limit of these $\lambda$-arrays;
 that is, for some sequence $\delta_n\to 0^+$, we can choose corresponding inequalities of the form \ref{eq:+squares} with $\lambda$-arrays $\bm{\lambda}_n$ such that $\bm{\lambda}_n\to \bm{\lambda}_\infty$ as $n\to \infty$.
@@ -573,7 +573,7 @@ A bit below we will show that repeating the proof of \ref{prop:Alexandrov's comp
 \leqno{\text{\ref{eq:CBB-CBA}}'}
 \]
 if $x_4$ lies on $[x_1x_2]$ and divides it in the ratio $(1-\alpha):\alpha$.
-After that it remains to follow the end of proof of \ref{prop:Alexandrov's comparison}.
+After that it remains to follow the end of the proof of \ref{prop:Alexandrov's comparison}.
 
 To prove \ref{eq:CBB-CBA}$'$, suppose $x_4$ lies on $[x_1x_2]$ and divides it in the ratio $(1-\alpha_n):\alpha_n$, then
 \[\alpha_n\cdot (1-\alpha_n)\cdot|x_1-x_2|^2-\alpha_n\cdot |x_1-x_4|^2-(1-\alpha_n)\cdot |x_2-x_4|^2=0;\leqno{\text{\ref{eq:trig-inq}}'}\]
@@ -649,7 +649,7 @@ Then
 \]
 since otherwise $L_n'(x_1,x_2,x_3,x_{3+k})\le 0$, which would imply~\ref{eq:L<En-hats}.
 
-We can assume that $X$ is geodesic, otherwise pass to its ultracompletion.
+We can assume that $X$ is geodesic; otherwise, pass to its ultracompletion.
 By \ref{eq:L'=L+L},
 $L_n'(x_1,x_2,x_3,x_{3+k})$ is a linear combination
 of $L_n(x_1,x_2,x_{2+i},x_{3+i})$ with positive coefficients;
@@ -685,7 +685,7 @@ It follows that \ref{eq:L<En-hats} holds for $x_1,x_2,x_3,x_{3+k}$ --- a contrad
 
 \begin{thm}{Lemma}\label{lem:area-bound}
 Let $(\lambda_1,\lambda_2,\lambda_3,-1)$ be the $\lambda$-array of an inequality of type $(3,1)$ and
-let $(x_1$, $x_2$, $x_3$, $x_4)$ be a 4-point array in the hyperbolic space.
+let $(x_1$, $x_2$, $x_3$, $x_4)$ be a 4-point point array in the hyperbolic space.
 
 Then
 \[\sum_{i,j=1}^4\lambda_i\cdot\lambda_j\cdot|x_i-x_j|_X^2
@@ -752,8 +752,8 @@ Since $\lambda_1+ \lambda_2+ \lambda_3=1$, we have $\lambda_1\ge \tfrac13$, and 
 Recall that $K_0$ denotes the cone in $W_4$ described by all inequalities of negative type $(3,1)$ and $(2,1)$.
 
 \begin{thm}{Corollary}\label{cor:squared-sides}
-Let $K\subset W_4$ be a convex closed cone.
-Suppose that $K\supset K_0$, but $K$-comparison does not hold for a 4-array of diameter at most $\delta$ in the hyperbolic space.
+Let $K\subset W_4$ be a closed convex cone.
+Suppose that $K\supset K_0$, but $K$-comparison does not hold for a 4-point array of diameter at most $\delta$ in the hyperbolic space.
 If $\delta$ is sufficiently small,
 then there is an inequality of negative type $(3,1)$ with a $\lambda$-array $(\lambda_1,\lambda_2,\lambda_3,-1)$ such that the inequality
 \[\sum_{i,j=1}^4\lambda_i\cdot\lambda_j\cdot|x_i-x_j|_X^2
@@ -762,11 +762,11 @@ then there is an inequality of negative type $(3,1)$ with a $\lambda$-array $(\l
 holds for any quadruple in $K$.
 \end{thm}
 
-This inequality should be interpreted as an $(3,1)$-inequality with a $\lambda$-array $(\lambda_1,\lambda_2,\lambda_3,-1)$ with error
+This inequality should be interpreted as a $(3,1)$-inequality with a $\lambda$-array $(\lambda_1,\lambda_2,\lambda_3,-1)$ with error
 \[10\cdot\delta^2\cdot \lambda_1\cdot\lambda_2\cdot\lambda_3\cdot (|x_1-x_2|_X^2+|x_2-x_3|_X^2+|x_3-x_1|_X^2).\]
 
 \parit{Proof.}
-Let $\theta$ be the associated form of the 4-array in the hyperbolic space.
+Let $\theta$ be the associated form of the 4-point array in the hyperbolic space.
 Since $K$ is convex, we can choose a quadratic inequality that does not hold for $\theta$, but holds for any form in $K$.
 Our inequality can be written as $\langle \omega,\rho_{\bm{x}} \rangle\ge 0$, where $\rho_{\bm{x}}\in W_4$ is an associated form of some 4-point array $(x_1,x_2,x_3,x_4)$ and $\omega$ is a fixed unit form in $W_4$.
 
@@ -779,7 +779,7 @@ Our inequality can be written as $\langle \omega,\rho_{\bm{x}} \rangle\ge 0$, wh
 
 Let $N\subset \SSS^2\subset V_4$ be the set of unit vectors $v$ for which $\theta(v)<0$.
 The set $N$ does not intersect the four equators $e_1$, $e_2$, $e_3$, $e_4$ parallel to the facets of $\triangle$.
-Moreover, since $K\supset K_0$, the set $N$ (up to sign) lies in one of triangles, say $T$;
+Moreover, since $K\supset K_0$, the set $N$ (up to sign) lies in one of the triangles, say $T$;
 we can assume that equators $e_1$, $e_2$, $e_3$ are extensions of sides of $T$, and $e_4$ is the remaining equator.
 
 Since $K\supset K_0$, we have $\omega(v)\ge 0$ for any $v\in V_4$.
@@ -808,7 +808,7 @@ Since
 \end{aligned}
 \eqlbl{eq:uvw}
 \]
-we have that $u$ points in a direction of $N$.
+we have that $u$ points in a direction from $N$.
 Therefore, $\rho_{\bm{x}}(u)\ge0$ is an inequality of negative type $(3,1)$.
 
 Suppose that the array $\bm{x}=(x_1,x_2,x_3,x_4)$ is equipped with a metric such that its associated form is $\theta$.
