--- a/4-point.tex
+++ b/4-point.tex
@@ -710,7 +710,7 @@ In particular, $\tilde a^2$ is a quadratic form on $W_4$.
 \parit{Proof.}
 By Kirszbraun's theorem (see \cite{lang-schroeder,AKP-2011} or \cite[Chapter 10]{AKP-2024}), we may assume that $x_1$, $x_2$, $x_3$ and $x_4$ lie in the hyperbolic plane; moreover, $x_4$ belongs to the solid hyperbolic triangle with vertices $x_1$, $x_2$ and $x_3$.
 Denote by $a$ the area of this triangle.
-Again, by Kirszbraun' theorem,
+Again, by Kirszbraun's theorem,
 \[a\le \tilde a.\]
 
 Since the hyperbolic plane has curvature $-1$, we have
